--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="images/Mhmd.jpg" alt="Mhmd peofile picture" height="200px" width="150px"></td>
       <td><h1>Mhmd ZAK</h1>
-      <p><em>Founder and CEO of <strong><a href="www.letsgetstarted.com">Letsgetstarted</a></strong>.</em></p>
+      <p><em>Founder and CEO of <strong><a href="https://linktr.ee/Letsgetstarted369">Letsgetstarted</a></strong>.</em></p>
       <p>I am a professional footballer and one of the partner cum founder of letsgetsarted. I love football and is so passionate about the things I do!</p></td>
     </tr>
   </table>
