--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Mhmd ZAK</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="images/Mhmd.jpg" alt="Mhmd peofile picture" height="200px" width="150px"></td>
+      <td><img class="mhmdzak" src="images/Mhmd.jpg" alt="Mhmd profile picture" height="150px" width="150px"></td>
       <td><h1>Mhmd ZAK</h1>
       <p><em>Founder and CEO of <strong><a href="https://linktr.ee/Letsgetstarted369">Letsgetstarted</a></strong>.</em></p>
       <p>I am a professional footballer and one of the partner cum founder of letsgetsarted. I love football and is so passionate about the things I do!</p></td>
@@ -46,7 +47,7 @@
     </tbody>
   </table>
   <hr>
-  <h1>Skills</h1>
+  <h3>Skills</h3>
   <table cellspacing= 10px>
         <tr>
           <td>Football</td>
@@ -65,6 +66,7 @@
   <a href="Hobbies.html">My Hobbies</a>
   <br>
   <a href="contact-me.html">contact me</a>
+  <!--<a Download href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf">Download cheatsheet</a>-->
 </body>
 
 
