--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
   <a href="Hobbies.html">My Hobbies</a>
   <br>
   <a href="contact-me.html">contact me</a>
+  <footer>
+    <P>© 2025 Mhmd ZAK</P>
+  </footer>
   <!--<a Download href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf">Download cheatsheet</a>-->
 </body>
 
